rust_writer_proc/tests/ui/parse_attrs_fails_if_attr_key_local_not_followed_by_equal_token.stderr
error: expected `,`
 --> tests/ui/parse_attrs_fails_if_attr_key_local_not_followed_by_equal_token.rs:5:65
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, local: path)]
  |                                                                 ^
